--- a/index.html
+++ b/index.html
@@ -1,71 +1,73 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="es">
   <head>
-    <meta charset="utf-8">
-    <title>AR Video Test</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.2.1/aframe/build/aframe-ar.js"></script>
-    <style>
-      body, html {
-        margin: 0;
-        overflow: hidden;
-        height: 100%;
-        background: black;
+    <meta charset="utf-8" />
+    <title>AR-video demo</title>
+
+    <!-- A-Frame + AR.js -->
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+
+    <!-- Gestos pinch / rotate -->
+    <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
+
+    <!-- Script para seleccionar la cámara más adecuada -->
+    <script>
+      async function selectCameraAndStart() {
+        const scene = document.querySelector('a-scene');
+
+        try {
+          // Paso 1: pedir permiso con baja resolución para evitar telefoto
+          await navigator.mediaDevices.getUserMedia({
+            video: {
+              facingMode: { exact: "environment" },
+              width: { ideal: 1280 },
+              height: { ideal: 720 },
+              aspectRatio: 16/9
+            }
+          });
+
+          // Paso 2: enumerar cámaras con permiso concedido
+          const devices = await navigator.mediaDevices.enumerateDevices();
+          const videoDevices = devices.filter(d => d.kind === 'videoinput');
+
+          console.log('Cámaras detectadas:', videoDevices);
+
+          // Buscar gran angular
+          const wideCam = videoDevices.find(d => /wide|ultra/i.test(d.label));
+          let arjsConfig;
+
+          if (wideCam) {
+            console.log('Usando cámara gran angular:', wideCam.label);
+            arjsConfig = sourceType: webcam; deviceId: ${wideCam.deviceId}; debugUIEnabled: false; sourceWidth: 1280; sourceHeight: 720; displayWidth: 1280; displayHeight: 720;;
+          } else {
+            console.log('No se detectó cámara gran angular. Usando trasera con baja resolución.');
+            arjsConfig = 'sourceType: webcam; facingMode: environment; debugUIEnabled: false; sourceWidth: 1280; sourceHeight: 720; displayWidth: 1280; displayHeight: 720;';
+          }
+
+          // Aplicar configuración a AR.js
+          scene.setAttribute('arjs', arjsConfig);
+
+        } catch (err) {
+          console.error('Error seleccionando cámara:', err);
+          // Fallback seguro
+          scene.setAttribute('arjs', 'sourceType: webcam; facingMode: environment; debugUIEnabled: false; sourceWidth: 640; sourceHeight: 480; displayWidth: 640; displayHeight: 480;');
+        }
       }
-      #overlay {
-        position: fixed;
-        top: 0; left: 0;
-        width: 100%; height: 100%;
-        background: rgba(0,0,0,0.85);
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 20px;
-        text-align: center;
-        z-index: 10;
-        cursor: pointer;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="overlay">Toca para iniciar</div>
 
-    <a-scene
-      embedded
-      vr-mode-ui="enabled: false"
-      renderer="logarithmicDepthBuffer: true;"
-      arjs="sourceType: webcam; debugUIEnabled: false;">
-      
-      <!-- Video -->
-      <a-assets>
-        <video id="vid" src="video.mp4" preload="auto" crossorigin="anonymous" webkit-playsinline playsinline></video>
-      </a-assets>
+      window.addEventListener('load', selectCameraAndStart);
+    </script>
 
-      <!-- Marcador con video encima -->
-      <a-marker type="pattern" url="marker.patt" videohandler>
-        <a-video src="#vid"
-                 scale="1 1 1"
-                 position="0 0 0"
-                 rotation="-90 0 0"
-                 class="clickable"
-                 gesture-handler></a-video>
-      </a-marker>
-
-      <a-entity camera></a-entity>
-    </a-scene>
-
+    <!-- Componente vídeo -->
     <script>
       AFRAME.registerComponent('videohandler', {
         init () {
           const marker  = this.el;
           const vid     = document.querySelector('#vid');
           const overlay = document.getElementById('overlay');
-          const videoEl = marker.querySelector('a-video');
           let tapDone   = false;
           let markerOn  = false;
-          let calibrado = false;
 
           const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent) || 
                         (navigator.platform === 'MacIntel' && navigator.maxTouchPoints > 1);
@@ -91,21 +93,10 @@
           marker.addEventListener('markerFound', () => {
             markerOn = true;
             tryPlay();
-
-            // Calibrar posición tras encontrar el marcador
-            if (!calibrado) {
-              setTimeout(() => {
-                videoEl.setAttribute('position', '0 0 0');
-                videoEl.setAttribute('rotation', '-90 0 0');
-                calibrado = true;
-              }, 500); // medio segundo para que el tracking se estabilice
-            }
           });
-
           marker.addEventListener('markerLost', () => {
             markerOn = false;
             vid.pause();
-            calibrado = false;
           });
 
           function tryPlay () {
@@ -126,5 +117,67 @@
         }
       });
     </script>
+
+    <style>
+      #overlay{
+        position:fixed; inset:0;
+        display:flex; align-items:center; justify-content:center;
+        background:transparent;
+        color:#fff; font-family:sans-serif; font-size:1.25rem;
+        text-shadow:0 0 6px #000;
+        z-index:999; text-align:center; padding:1rem;
+      }
+    </style>
+  </head>
+  <body style="margin:0; overflow:hidden;">
+    <!-- Overlay -->
+    <div id="overlay">
+      <div>
+        <p>👆 Toca la pantalla para activar el audio</p>
+        <p style="font-size: 0.9rem; opacity: 0.8;">Si es necesario reduce el zoom de tu cámara. Apunta hacia el marcador.</p>
+      </div>
+    </div>
+
+    <!-- Escena -->
+    <a-scene
+      vr-mode-ui="enabled:false"
+      loading-screen="enabled:false"
+      embedded
+      gesture-detector
+      id="scene">
+
+      <a-assets>
+        <video id="vid"
+               src="assets/asset.mp4"
+               preload="auto"
+               loop
+               crossorigin="anonymous"
+               playsinline
+               webkit-playsinline></video>
+      </a-assets>
+
+      <a-marker type="pattern"
+                preset="custom"
+                url="assets/marker.patt"
+                videohandler
+                smooth="true"
+                smoothCount="10"
+                smoothTolerance="0.01"
+                smoothThreshold="5"
+                raycaster="objects:.clickable"
+                emitevents="true"
+                cursor="fuse:false;rayOrigin:mouse"
+                id="markerA">
+
+        <a-video src="#vid"
+                 scale="1 1 1"
+                 position="0 0 0"
+                 rotation="-90 0 0"
+                 class="clickable"
+                 gesture-handler></a-video>
+      </a-marker>
+
+      <a-entity camera></a-entity>
+    </a-scene>
   </body>
 </html>
