--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <title>AR-video demo</title>
+  <title>AR-video demo1</title>
 
   <!-- A-Frame + AR.js -->
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
